@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.android.keepass"
-      android:versionCode="10" android:versionName="0.2.0">
+      android:versionName="0.2.1" android:versionCode="11">
     <uses-sdk android:minSdkVersion="1"/>
     <application android:label="@string/app_name" android:icon="@drawable/keepass_icon">
         <activity android:name=".KeePass"
@@ -11,11 +11,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    	<activity android:name=".fileselect.FileSelectActivity"></activity><activity android:name=".PasswordActivity"></activity><activity android:name=".GroupActivity"></activity>
+    	<activity android:name=".fileselect.FileSelectActivity"></activity>
+    	<activity android:name=".PasswordActivity" android:configChanges="orientation|keyboardHidden"></activity>
+    	<activity android:name=".GroupActivity"></activity>
+    	<activity android:name=".GroupAddEntryActivity"></activity>
 		<activity android:name=".EntryActivity"></activity>
+		<activity android:name=".LockingActivity"></activity>
+		<activity android:name=".EntryEditActivity" android:configChanges="orientation|keyboardHidden"></activity>
+		<service android:name=".services.TimeoutService"></service>
 		<meta-data android:name="com.a0soft.gphone.aTrackDog.webURL" android:value="http://keepassdroid.com" />
-	<service android:name=".services.TimeoutService"></service>
-<activity android:name=".LockingActivity"></activity>
-<activity android:name=".EntryEditActivity"></activity>
-</application>
+	</application>
 </manifest> 
