@@ -51,6 +51,7 @@
 			<EditText android:id="@+id/entry_title" 
 			  android:layout_width="fill_parent"
 			  android:layout_height="wrap_content"
+			  android:singleLine="true"
 			  android:layout_below="@id/entry_title_label"/>
 			<!-- Username -->
 			<TextView android:id="@+id/entry_user_name_label"
@@ -61,6 +62,7 @@
 			<EditText android:id="@+id/entry_user_name" 
 			  android:layout_width="fill_parent"
 			  android:layout_height="wrap_content"
+			  android:singleLine="true"
 			  android:layout_below="@id/entry_user_name_label"/>
 			<!--  URL -->
 			<TextView android:id="@+id/entry_url_label"
@@ -71,6 +73,7 @@
 			<EditText android:id="@+id/entry_url" 
 			  android:layout_width="fill_parent"
 			  android:layout_height="wrap_content"
+			  android:singleLine="true"
 			  android:layout_below="@id/entry_url_label"/>
 			<!-- Password -->
 			<TextView android:id="@+id/entry_password_label"
@@ -82,6 +85,7 @@
 			  android:layout_width="fill_parent"
 			  android:layout_height="wrap_content"
 			  android:password="true"
+			  android:singleLine="true"
 			  android:layout_below="@id/entry_password_label"/>
 			<!-- Confirm Password -->
 			<TextView android:id="@+id/entry_confpassword_label"
@@ -93,6 +97,7 @@
 			  android:layout_width="fill_parent"
 			  android:layout_height="wrap_content"
 			  android:password="true"
+			  android:singleLine="true"
 			  android:layout_below="@id/entry_confpassword_label"/>
 			<!-- Comment -->
 			<TextView android:id="@+id/entry_comment_label"
