@@ -34,7 +34,7 @@
 	  android:scaleType="fitXY"
 	  android:tint="@color/blue_highlight"
 	  android:src="@android:drawable/divider_horizontal_dark"/>
-	<Button android:id="@+id/add"
+	<Button android:id="@+id/add_entry"
 	  android:layout_width="wrap_content"
 	  android:layout_height="wrap_content"
 	  android:layout_alignParentBottom="true"
@@ -42,7 +42,7 @@
 	<ImageView android:id="@+id/divider2"
 	  android:layout_width="fill_parent"
 	  android:layout_height="wrap_content"
-	  android:layout_above="@id/add"
+	  android:layout_above="@id/add_entry"
 	  android:scaleType="fitXY"
 	  android:tint="@color/blue_highlight"
 	  android:src="@android:drawable/divider_horizontal_dark"/>
