@@ -1,0 +1,41 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+ Copyright 2009 Brian Pellin.
+     
+ This file is part of KeePassDroid.
+
+  KeePassDroid is free software: you can redistribute it and/or modify
+  it under the terms of the GNU General Public License as published by
+  the Free Software Foundation, either version 3 of the License, or
+  (at your option) any later version.
+
+  KeePassDroid is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  GNU General Public License for more details.
+
+  You should have received a copy of the GNU General Public License
+  along with KeePassDroid.  If not, see <http://www.gnu.org/licenses/>.
+-->
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  android:layout_width="fill_parent"
+  android:layout_height="fill_parent">
+	<TextView android:id="@+id/group_header" 
+	  android:layout_width="wrap_content"
+	  android:layout_height="wrap_content"
+	  android:textSize="15sp"
+	  android:text="@string/current_group_root"
+	  android:textStyle="bold"
+	  android:layout_weight="0"/>
+	<ImageView android:id="@+id/divider1"
+	  android:layout_width="fill_parent"
+	  android:layout_height="wrap_content"
+	  android:layout_below="@id/group_header"
+	  android:scaleType="fitXY"
+	  android:tint="@color/blue_highlight"
+	  android:src="@android:drawable/divider_horizontal_dark"/>
+	<ListView android:id="@android:id/list"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/divider1"/>
+</RelativeLayout>
